[package]
name = "debug_tree"
version = "0.3.1"
authors = ["Marty Papamanolis <marty@mindpipess.com>"]
edition = "2018"
repository = "https://github.com/martypapa/debug-tree"
readme = "README.adoc"
license = "MIT"
description = "Build a tree one element at a time and output it as a pretty string."

[lib]
name = "debug_tree"
crate-type = ["lib"]

[dependencies]
once_cell = "~1.3.1"

[dev-dependencies]
tokio = {version = "0.2.9", features = ["macros", "fs"] }
futures = "0.3.4"